# cmake_trivial_2024

./: CMakeLists.txt  README.md  build.sh  run.sh
alpha/: CMakeLists.txt
alpha/src/: bar.cc  bar.h  baz.cc  baz.h  foo.cc
beta/: CMakeLists.txt
beta/src/: meh.cc  meh.h
src/: use.cc
